@@ -256,7 +256,10 @@ linux source directory, although an absolute path may be necessary for some kern
 If a relative pathname doesn't work, try absolute.
 .IP \(bu 4
 Finally, the third part is optional if the file name part was given,
-and identifies the line number in the source file, preceded by a ":".
+and identifies the line number in the source file preceded by a ":"
+or a "+".  The line number is assumed to be an
+absolute line number if preceded by a ":", or relative to the entry of
+function if preceded by a "+".
 .PP
 As an alternative, PATTERN may be a numeric constant, indicating an
 (module-relative or kernel-_stext-relative) address.  In guru mode
@@ -493,7 +496,10 @@ refers to the first byte of the statement whose compiled instructions
 include the given address in the kernel.
 .TP
 kernel.statement("*@kernel/sched.c:2917")
-refers to the statement of line 2917 within the "kernel/sched.c".
+refers to the statement of line 2917 within "kernel/sched.c".
+.TP
+kernel.statement("bio_init@fs/bio.c+3")
+refers to the statement at line bio_init+3 within "fs/bio.c".
 .TP
 syscall.*.return
 refers to the group of probe aliases with any name in the third position
