@@ -1,5 +1,10 @@
 * What's new in version 0.7
 
+- .statement("func@file+line") probes are now supported to allow a
+  match relative to the entry of the function incremented by line
+  number.  This allows using the same systemtap script if the rest
+  of the file.c source only changes slightly.
+
 - Stack backtraces for x86 and x86-64 are generated by a dwarf
   debuginfo-based unwinder based on the code from <jbeulich@novell.com>.
   This should give more accurate backtraces.
